# powerlog-parser

./: .gitignore  LICENSE  README.md  powerlog-parser  pyproject.toml  readme.md
powerlog_parser/: __init__.py  cli.py  config.py  parser.py
tests/: test_powerlog_parser.py
tests/powerlogs/multi_day_zstd/fj-aox01/2025/10/: 2025-10-31.log.zst
tests/powerlogs/multi_day_zstd/fj-aox02/2025/10/: 2025-10-31.log.zst
