[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerlog-parser"
version = "0.1.0"
description = "Utilities for parsing HPC power log files and producing summary reports."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "HPC Mod Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "zstandard>=0.22",
    "pytz>=2023.3",
    "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "PyYAML>=6.0",
    "zstandard>=0.22",
    "pytz>=2023.3",
]

[project.urls]
Homepage = "https://github.com/hpcmod/powerlog-parser"
Repository = "https://github.com/hpcmod/powerlog-parser"
"Bug Tracker" = "https://github.com/hpcmod/powerlog-parser/issues"

[project.scripts]
"powerlog-parser" = "powerlog_parser.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["powerlog_parser*"]
